[tool.poetry]
name = "gino"
version = "2.0.0-alpha.1"
description = "GINO Is Not ORM - a Python asyncio ORM on SQLAlchemy core."
license = "BSD-3-Clause"
authors = ["Fantix King <fantix.king@gmail.com>"]
maintainers = ["Tony Wang <wwwjfy@gmail.com>", "Fantix King <fantix.king@gmail.com>"]
readme = "README.rst"
homepage = "https://python-gino.org"
repository = "https://github.com/python-gino/gino"
documentation = "https://python-gino.org/docs/"
keywords = ["orm", "asyncio", "sqlalchemy", "asyncpg", "python3"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
]

[tool.poetry.dependencies]
python = "^3.7"
asyncpg = {git = "https://github.com/MagicStack/asyncpg.git"}
SQLAlchemy = "^1.4.17"

# compatibility
importlib_metadata = {version = "^1.7.0", python = "<3.8"}

# extensions
#gino-starlette = { version = "^0.1.1", optional = true }
#gino-aiohttp = { version = "^0.1.0", optional = true }
#gino-tornado = { version = "^0.1.0", optional = true }
#gino-sanic = { version = "^0.1.0", optional = true }
#gino-quart = { version = "^0.1.0", optional = true }

[tool.poetry.extras]
starlette = ["gino-starlette"]
aiohttp = ["gino-aiohttp"]
tornado = ["gino-tornado"]
sanic = ["gino-sanic"]
quart = ["gino-quart"]

[tool.poetry.dev-dependencies]
psycopg2-binary = "^2.8.5"
click = "^7.1.2"

# tests
pytest = "^6.0.1"
pytest-asyncio = "^0.14.0"
pytest-mock = "^3.3.0"
pytest-cov = "^2.10.1"
black = "^19.10b0"
mypy = "^0.782"

# docs
sphinx = "^3.2.1"
sphinx-rtd-theme = "^0.5.0"
sphinxcontrib-apidoc = "^0.3.0"
sphinx-autobuild = "^0.7.1"
sphinx-intl = {version = "^2.0.1", extras = ["transifex"]}

[tool.poetry.plugins."sqlalchemy.dialects"]
"postgresql.gino" = "gino.dialects.asyncpg:AsyncpgDialect"

[build-system]
requires = ["poetry>=1.0"]
build-backend = "poetry.masonry.api"
