[tool.poetry]
name = "sql-postgresql-trio"
version = "0.1.0"
description = ""
authors = ["Fantix King <fantix.king@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
gino = {path = "../..", extras = ["triopg"]}

[tool.poetry.dev-dependencies]
pytest = "^5.4.2"
pytest-trio = "^0.6.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
